--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -231,13 +231,19 @@
   margin-bottom:0;
 }
 
+.head-cart-purchase-button-wrap #continue{
+  color: #fff;
+  letter-spacing: 1px;
+}
+
 .head-cart-purchase-button-wrap button {
   padding: 10px 0;
   border: none;
   width: 100%;
-  background-color: #977257;
-  color: #fff;
+  /* background-color: #977257; */
+  color: #977257;
   cursor: pointer;
+  border: 1px solid #977257
 }
 
 .badge {
